--- a/index.html
+++ b/index.html
@@ -243,86 +243,9 @@
           </div>
         </div>
       </div>
-      <div id="white-bg" class="w-full relative">
-        <div
-          class="absolute top-0 left-0 w-[143px] h-[237px] bg-lightblue opacity-10 rounded-r-full"
-        ></div>
-        <div
-          class="absolute top-[135px] left-0 w-[263px] h-[331px] bg-pink opacity-10 rounded-r-full"
-        ></div>
-        <div
-          class="flex flex-col gap-y-4 px-8 justify-center items-center mx-auto max-w-[1440px] min-h-[500px] pt-28 pb-28"
-        >
-          <h1 class="z-10 md:text-29xl text-20xl text-center">
-            The future of recruitment technology
-          </h1>
-          <h3 class="z-10 leading-8 font-light w-full md:w-[710px] text-center">
-            Floats empowers recruiters to showcase candidates like never before.
-            It&apos;s all about giving you a unique edge, improving client
-            engagement, and making your recruitment process effortless.
-          </h3>
-          <a
-            href="#sign-up-2"
-            class="mt-3 px-8 py-4 z-10 border border-pink hover:border-pink/10 text-pink rounded-md hover:bg-pink/10 ease-linear duration-200"
-          >
-            Be the first to try
-          </a>
-        </div>
-      </div>
-      <div id="two-pills" class="w-full relative overflow-x-hidden pb-24">
-        <div class="absolute w-full top-0 bottom-0 flex justify-center">
-          <div
-            class="flex-shrink-0 w-full rounded-r-full md:w-[1376px] md:translate-x-24 bg-darkblue md:rounded-full h-[534px]"
-          ></div>
-          <div
-            class="hidden md:block flex-shrink-0 w-[1376px] -translate-x-24 bg-lightblue opacity-20 rounded-full h-[534px]"
-          ></div>
-          <div
-            class="absolute z-20 right-0 top-[342px] bg-lightblue opacity-70 w-[142px] h-[137px] rounded-l-full"
-          ></div>
-          <div
-            class="absolute z-30 right-0 top-[420px] bg-pink opacity-90 w-[252px] h-[193px] rounded-l-full"
-          ></div>
-        </div>
-        <div
-          class="relative flex mx-auto max-w-[1440px] w-full h-[534px] xl:px-[200px] md:px-[90px] px-8"
-        >
-          <div
-            class="w-full md:w-1/2 pt-12 pb-16 text-white min-h-[400px] pr-8"
-          >
-            <h4 class="text-4xl mb-8">So where did this come from?</h4>
-            <p class="leading-7 tracking-wide font-light mb-4">
-              Welcome aboard the Floats starship, where the future of
-              recruitment transcends the confines of antiquated CRMs and ATSs.
-              Here, we don&apos;t just adapt to change &hyphen; we are the
-              change.
-            </p>
-            <p class="leading-7 tracking-wide font-light">
-              Once upon a starlit night, two trailblazers named Shaun and Scott
-              found their destinies intertwined. Shaun, a tech connoisseur and
-              recruitment maven, and Scott, a maestro of design and development
-              and hiring teams, were united by a shared discontent &hyphen; the
-              lacklustre state of the tech recruitment cosmos.
-            </p>
-          </div>
-          <div class="hidden md:block w-1/2 relative">
-            <div
-              class="absolute overflow-hidden rounded-l-full -translate-x-24 left-0 w-[723px] h-[534px]"
-            >
-              <div class="absolute w-full h-full -bottom-6">
-                <img
-                  src="images/man-laptop.png"
-                  class="h-full object-cover"
-                  alt="recruiter"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div id="our-story" class="w-full">
         <div
-          class="relative mx-auto max-w-[1440px] w-full flex flex-col gap-y-12 lg:flex-row gap-x-16 pt-0 pb-16 px-9 lg:px-0"
+          class="relative mx-auto mb-28 max-w-[1440px] w-full flex flex-col gap-y-12 lg:flex-row gap-x-16 pt-0 pb-16 px-9 lg:px-0"
         >
           <div class="pb-4 lg:w-1/2 w-full flex relative">
             <div
@@ -352,12 +275,12 @@
             <h5 class="z-10 text-24xl mb-4 w-full leading-tight">
               Welcome aboard the Floats starship
             </h5>
-            <p class="leading-wider font-light mb-3">
+            <p class="leading-loose font-light mb-3">
               Welcome aboard the Floats starship, where the future of
               recruitment transcends the confines of antiquated CRMs and ATSs.
               Here, we don't just adapt to change ‐ we are the change.
             </p>
-            <p class="leading-wider font-light mb-4">
+            <p class="leading-loose font-light mb-4">
               Once upon a starlit night, two trailblazers named Shaun and Scott
               found their destinies intertwined. Shaun, a tech connoisseur and
               recruitment maven, and Scott, a maestro of design and development
@@ -375,132 +298,110 @@
           </div>
         </div>
       </div>
-      <div class="relative w-full">
-        <div
-          class="absolute z-0 top-0 left-0 right-0 bottom-0 bg-lightblue opacity-20"
-        ></div>
-        <div
-          class="absolute z-10 top-[228px] left-0 bg-pink opacity-60 lg:opacity-90 w-[160px] h-[154px] rounded-r-full"
-        ></div>
-        <div
-          class="absolute z-10 top-[330px] left-0 bg-lightblue opacity-40 lg:opacity-70 w-[73px] h-[109px] rounded-r-full"
-        ></div>
-        <div
-          class="mx-auto max-w-[1440px] flex flex-col lg:flex-row items-center xl:px-[200px] md:px-[90px] px-8 py-[72px]"
-        >
+      <div id="two-pills" class="w-full relative overflow-x-hidden pb-8">
+        <div class="absolute w-full top-0 bottom-0 flex justify-center">
           <div
-            id="highlights-text"
-            class="w-full lg:w-1/2 z-20 flex flex-col gap-y-4 lg:pr-[3rem] mb-6 lg:md-0"
-          >
-            <div class="flex gap-x-2 items-center">
-              <i class="fa-regular fa-gem text-2xl mr-1"></i>
-              <h5 class="uppercase text-xs tracking-[0.25rem]">
-                Sneak peak highlights
-              </h5>
-            </div>
-            <h5 class="z-10 text-24xl w-full leading-tight">
-              Ok, just a few more then...
-            </h5>
-            <ul class="mb-1 z-10">
-              <li class="my-6 font-extralight flex">
-                <i
-                  class="fa-solid fa-check text-green text-xl leading-none pr-6"
-                ></i>
-                Real-time analytics and alerts for tracking your outreach
-              </li>
-              <li class="my-6 font-extralight flex">
-                <i
-                  class="fa-solid fa-check text-green text-xl leading-none pr-6"
-                ></i>
-                Beat the competition with superior presentation
-              </li>
-              <li class="my-6 font-extralight flex">
-                <i
-                  class="fa-solid fa-check text-green text-xl leading-none pr-6"
-                ></i>
-                Automate workflows with an AI-assistant
-              </li>
-              <li class="my-6 font-extralight flex">
-                <i
-                  class="fa-solid fa-check text-green text-xl leading-none pr-6"
-                ></i>
-                <p>Integrate with<em> nearly </em>any CRM or ATS</p>
-              </li>
-            </ul>
-          </div>
-          <div id="sign-up-form" class="w-full lg:w-1/2 relative">
-            <div
-              class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col"
-            >
+            class="flex-shrink-0 w-full rounded-r-full md:w-[1376px] md:translate-x-24 bg-darkblue md:rounded-full h-[534px]"
+          ></div>
+          <div
+            class="hidden md:block flex-shrink-0 w-[1376px] -translate-x-24 bg-lightblue opacity-20 rounded-full h-[534px]"
+          ></div>
+          <div
+            class="absolute z-20 right-0 top-[292px] bg-lightblue opacity-70 w-[102px] h-[137px] rounded-l-full"
+          ></div>
+          <div
+            class="absolute z-30 right-0 top-[370px] bg-pink opacity-90 w-[212px] h-[193px] rounded-l-full"
+          ></div>
+        </div>
+        <div
+          class="relative flex mx-auto max-w-[1440px] w-full h-[534px] xl:px-[200px] md:px-[90px] px-8"
+        >
+          <div class="w-full md:w-1/2 pt-6 pb-6 text-white min-h-[400px] pr-8">
+            <div class="max-w-[492px] p-10 text-white flex flex-col">
               <a name="sign-up-2"></a>
-              <h4 class="text-3xl mb-9">Ready to supercharge your outreach?</h4>
-              <form
-                class="flex flex-col gap-y-6"
-                action="https://floats.us21.list-manage.com/subscribe/post?u=2bf6a98eb8e2066ad99fcc95b&amp;id=b656c3932b&amp;f_id=008559e1f0"
-                method="post"
-                id="mc-embedded-subscribe-form"
-                name="mc-embedded-subscribe-form"
-                class="validate"
-                target="_blank"
-                novalidate="novalidate"
-              >
-                <div>
-                  <label for="email" class="font-light text-xs"
-                    >Email address</label
-                  >
-                  <input
-                    type="email"
-                    name="EMAIL"
-                    id="email"
-                    class="bg-white text-black p-2 rounded-md w-full h-[40px]"
-                  />
-                </div>
-                <div>
-                  <label for="first_name" class="font-light text-xs"
-                    >First name</label
-                  >
-                  <input
-                    type="text"
-                    id="first_name"
-                    name="FNAME"
-                    class="bg-white text-black p-2 rounded-md w-full h-[40px]"
-                  />
-                </div>
-                <div>
-                  <label for="mobile" class="font-light text-xs"
-                    >Mobile number</label
-                  >
-                  <input
-                    type="text"
-                    id="mobile"
-                    name="PHONE"
-                    class="bg-white text-black p-2 rounded-md w-full h-[40px]"
-                  />
-                  <input
-                    type="hidden"
-                    name="tags"
-                    value="2816081,2816082,2816083"
-                  />
-                  <div
-                    style="position: absolute; left: -5000px"
-                    aria-hidden="true"
-                  >
+              <h4 class="text-3xl mb-9">Ready to jump on board?</h4>
+              <div class="w-[90%]">
+                <form
+                  class="flex flex-col gap-y-6"
+                  action="https://floats.us21.list-manage.com/subscribe/post?u=2bf6a98eb8e2066ad99fcc95b&amp;id=b656c3932b&amp;f_id=008559e1f0"
+                  method="post"
+                  id="mc-embedded-subscribe-form"
+                  name="mc-embedded-subscribe-form"
+                  class="validate"
+                  target="_blank"
+                  novalidate="novalidate"
+                >
+                  <div>
+                    <label for="email" class="font-light text-xs"
+                      >Email address</label
+                    >
                     <input
-                      type="text"
-                      name="b_2bf6a98eb8e2066ad99fcc95b_b656c3932b"
-                      tabindex="-1"
-                      value=""
+                      type="email"
+                      name="EMAIL"
+                      id="email"
+                      class="bg-white text-black p-2 rounded-md w-full h-[40px]"
                     />
                   </div>
-                </div>
-                <input
-                  type="submit"
-                  value="Join the waitlist"
-                  name="subscribe"
-                  id="mc-embedded-subscribe"
-                  class="cursor-pointer self-start mt-4 rounded-md text-white border-white border hover:border-white/30 px-8 py-3 hover:bg-white/20 ease-linear duration-200"
+                  <div>
+                    <label for="first_name" class="font-light text-xs"
+                      >First name</label
+                    >
+                    <input
+                      type="text"
+                      id="first_name"
+                      name="FNAME"
+                      class="bg-white text-black p-2 rounded-md w-full h-[40px]"
+                    />
+                  </div>
+                  <div>
+                    <label for="mobile" class="font-light text-xs"
+                      >Mobile number</label
+                    >
+                    <input
+                      type="text"
+                      id="mobile"
+                      name="PHONE"
+                      class="bg-white text-black p-2 rounded-md w-full h-[40px]"
+                    />
+                    <input
+                      type="hidden"
+                      name="tags"
+                      value="2816081,2816082,2816083"
+                    />
+                    <div
+                      style="position: absolute; left: -5000px"
+                      aria-hidden="true"
+                    >
+                      <input
+                        type="text"
+                        name="b_2bf6a98eb8e2066ad99fcc95b_b656c3932b"
+                        tabindex="-1"
+                        value=""
+                      />
+                    </div>
+                  </div>
+                  <input
+                    type="submit"
+                    value="Join the waitlist"
+                    name="subscribe"
+                    id="mc-embedded-subscribe"
+                    class="cursor-pointer self-start mt-4 rounded-md text-white border-white border hover:border-white/30 px-8 py-3 hover:bg-white/20 ease-linear duration-200"
+                  />
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="hidden md:block w-1/2 relative">
+            <div
+              class="absolute overflow-hidden rounded-l-full -translate-x-24 left-0 w-[723px] h-[534px]"
+            >
+              <div class="absolute w-full h-full -bottom-6">
+                <img
+                  src="images/man-laptop.png"
+                  class="h-full object-cover"
+                  alt="recruiter"
                 />
-              </form>
+              </div>
             </div>
           </div>
         </div>
@@ -529,7 +430,7 @@
           </div>
         </div>
         <div class="w-full flex justify-center items-center pb-14 pt-8">
-          <p class="text-xs">Copyright floats.ai 2023</p>
+          <p class="text-xs text-darkblue">Copyright floats.ai 2023</p>
         </div>
       </div>
     </div>
