--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
       </div>
       <div id="our-story" class="w-full">
         <div
-          class="relative mx-auto mb-28 max-w-[1440px] w-full flex flex-col gap-y-12 lg:flex-row gap-x-16 pt-0 pb-16 px-9 lg:px-0"
+          class="relative mx-auto mb-6 lg:mb-28 max-w-[1440px] w-full flex flex-col lg:flex-row gap-x-16 pt-0 pb-16 px-9 lg:px-0"
         >
-          <div class="pb-4 lg:w-1/2 w-full flex relative">
+          <div class="pb-4 lg:w-1/2 md:h-[600px] w-full flex relative">
             <div
-              class="z-10 rounded-full w-[1000px] h-[600px] overflow-hidden -ml-[220px] relative"
+              class="z-10 rounded-full md:absolute md:right-[10px] lg:right-0 w-full min-h-[400px] md:w-[1000px] md:h-[600px] overflow-hidden relative"
             >
               <img
                 src="images/scott-and-shaun.png"
@@ -258,10 +258,10 @@
               />
             </div>
             <div
-              class="absolute z-0 top-[380px] right-[360px] bg-lightblue opacity-70 rounded-full overflow-hidden w-[600px] h-[380px]"
+              class="hidden lg:block absolute z-0 top-[380px] right-[360px] bg-lightblue opacity-70 rounded-full overflow-hidden w-[600px] h-[380px]"
             ></div>
             <div
-              class="absolute z-0 top-[140px] right-[50px] bg-pink rounded-full overflow-hidden w-[1000px] h-[454px]"
+              class="absolute z-0 top-[76px] md:top-[140px] right-[14px] md:right-[50px] bg-pink rounded-full overflow-hidden w-[1000px] h-[324px] md:h-[454px]"
             ></div>
           </div>
           <div
@@ -310,14 +310,16 @@
             class="absolute z-20 right-0 top-[292px] bg-lightblue opacity-70 w-[102px] h-[137px] rounded-l-full"
           ></div>
           <div
-            class="absolute z-30 right-0 top-[370px] bg-pink opacity-90 w-[212px] h-[193px] rounded-l-full"
+            class="absolute z-30 right-0 top-[370px] opacity-20 bg-pink md:opacity-90 w-[212px] h-[193px] rounded-l-full"
           ></div>
         </div>
         <div
-          class="relative flex mx-auto max-w-[1440px] w-full h-[534px] xl:px-[200px] md:px-[90px] px-8"
+          class="relative flex mx-auto max-w-[1440px] w-full h-[534px] xl:px-[200px] md:px-[20px] px-8"
         >
-          <div class="w-full md:w-1/2 pt-6 pb-6 text-white min-h-[400px] pr-8">
-            <div class="max-w-[492px] p-10 text-white flex flex-col">
+          <div
+            class="w-full md:w-1/2 pt-6 pb-6 text-white min-h-[400px] pr-8 flex items-center"
+          >
+            <div class="max-w-[492px] text-white flex flex-col">
               <a name="sign-up-2"></a>
               <h4 class="text-3xl mb-9">Ready to jump on board?</h4>
               <div class="w-[90%]">
