--- a/thanks.html
+++ b/thanks.html
@@ -46,7 +46,7 @@
             Welcome to floats.ai!
           </h3>
           <div class="flex gap-x-2 text-darkblue">
-            <i class="fa-solid fa-book text-xl pr-1"></i>
+            <i class="fa-regular fa-face-grin-squint text-xl pr-1"></i>
             <a
               href="https://www.linkedin.com/company/floats-ai/"
               class="underline hover:no-underline"
