--- a/index.html
+++ b/index.html
@@ -410,24 +410,28 @@
       </div>
       <div id="footer" class="max-w-[1440px] mx-auto flex flex-col px-[100px]">
         <div
-          class="w-full flex flex-col gap-y-8 md:flex-row justify-center md:justify-between pt-14 pb-8 items-center border-b-darkblue border-b"
+          class="w-full flex flex-col gap-y-8 md:flex-row justify-center md:justify-between pt-14 pb-8 items-end border-b-darkblue border-b"
         >
-          <div class="w-[224px] h-[60px]">
-            <img src="images/logo-colour.svg" alt="Floats" class="w-full" />
+          <div class="h-[40px]">
+            <img
+              src="images/logo-colour.svg"
+              alt="Floats"
+              class="w-full h-full"
+            />
           </div>
           <div class="flex gap-x-8">
             <a
               class="text-darkblue"
               href="https://www.linkedin.com/company/floats-ai/"
-              ><i class="fa-brands fa-linkedin text-4xl"></i
+              ><i class="fa-brands fa-linkedin text-2xl"></i
             ></a>
             <a class="text-darkblue" href="https://twitter.com/Floatsai"
-              ><i class="fa-brands fa-twitter text-4xl"></i
+              ><i class="fa-brands fa-twitter text-2xl"></i
             ></a>
             <a
               class="text-darkblue"
               href="https://facebook.com/profile.php?id=100092157235267"
-              ><i class="fa-brands fa-facebook text-4xl"></i
+              ><i class="fa-brands fa-facebook text-2xl"></i
             ></a>
           </div>
         </div>
