update Medium link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="flex gap-x-2 text-darkblue">
               <i class="fa-solid fa-book text-xl pr-1"></i>
               <a
-                href="https://www.linkedin.com/company/floats-ai/"
+                href="https://medium.com/@floats.ai/our-story-89c461ddbfb2"
                 class="underline hover:no-underline"
                 >Read the full journey on Medium</a
               >
