--- a/index.html
+++ b/index.html
@@ -9,8 +9,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta
       name="description"
-      content="Floats.ai is a game-changing platform for the modern recruiter. Reimagine recruitment. Streamline your outreach. Modernize your process."
+      content="Floats.ai is a game-changing platform for the modern recruiter. Present candidates with visually captivating profiles, scale outreach efforts with ease, streamline recruitment processes with interactive experiences, and unlock the potential of talent placement through AI-technology."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Floats.ai - Reimagine recruitment" />
+    <meta property="og:url" content="https://floats.ai/" />
+    <meta
+      property="og:image"
+      content="https://scott82anderson.github.io/floats/images/meta-image.png"
+    />
+    <meta
+      property="og:description"
+      content="A game-changing platform for the tech recruiter"
+    />
+    <meta name="twitter:title" content="Floats.ai" />
+    <meta
+      name="twitter:description"
+      content="A game-changing platform for the tech recruiter"
+    />
+    <meta
+      name="twitter:image"
+      content="https://scott82anderson.github.io/floats/images/meta-image.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&display=swap"
       rel="stylesheet"
