--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q9R33T30TQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-Q9R33T30TQ");
+    </script>
     <meta charset="UTF-8" />
     <title>Floats.ai | A game-changing platform for the modern recruiter</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
