--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h3
             class="z-10 mb-1 leading-8 font-light w-full md:w-[710px] tracking-wider text-white text-center"
           >
-            Reimagine recruitment. Streamline your outreach. Modernize your
+            Reimagine recruitment. Streamline your outreach. Modernise your
             process.
           </h3>
           <a
