update testimonial, add required field on email

--- a/index.html
+++ b/index.html
@@ -192,9 +192,7 @@
                 presentation quality, and speed to market... from PDF to
                 interactive candidate profiles in minutes!&rdquo;
               </p>
-              <p class="text-sm font-light my-6">
-                Paul Henderson <em>* name changed</em>
-              </p>
+              <p class="text-sm font-light my-6">Rikki Carmichael</p>
             </div>
           </div>
           <div id="sign-up-form" class="w-full lg:w-1/2 relative">
@@ -213,13 +211,13 @@
                 name="mc-embedded-subscribe-form"
                 class="validate"
                 target="_blank"
-                novalidate="novalidate"
               >
                 <div>
                   <label for="email" class="font-light text-xs"
                     >Email address</label
                   >
                   <input
+                    required
                     type="email"
                     name="EMAIL"
                     id="email"
@@ -364,13 +362,13 @@
                   name="mc-embedded-subscribe-form"
                   class="validate"
                   target="_blank"
-                  novalidate="novalidate"
                 >
                   <div>
                     <label for="email" class="font-light text-xs"
                       >Email address</label
                     >
                     <input
+                      required
                       type="email"
                       name="EMAIL"
                       id="email"
