--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 presentation quality, and speed to market... from PDF to
                 interactive candidate profiles in minutes!&rdquo;
               </p>
-              <p class="text-sm font-light my-6">Rikki Carmichael</p>
+              <p class="text-sm font-light my-6">&hyphen; Rikki Carmichael</p>
             </div>
           </div>
           <div id="sign-up-form" class="w-full lg:w-1/2 relative">
