update meta image URLs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://floats.ai/" />
     <meta
       property="og:image"
-      content="https://scott82anderson.github.io/floats/images/meta-image.png"
+      content="https://floats.ai/images/meta-image.png"
     />
     <meta
       property="og:description"
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://scott82anderson.github.io/floats/images/meta-image.png"
+      content="https://floats.ai/images/meta-image.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <link
