add logo meta tag

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <meta property="og:title" content="Floats.ai - Reimagine recruitment" />
     <meta property="og:url" content="https://floats.ai/" />
     <meta
+      property="og:logo"
+      content="https://floats.ai/images/floats-logo.png"
+    />
+    <meta
       property="og:image"
       content="https://floats.ai/images/meta-image.png"
     />
