add no credit card required

--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
             Reimagine recruitment. Streamline your outreach. Modernise your
             process.
           </h3>
-          <a
-            href="#sign-up"
-            class="mt-3 px-8 py-4 z-10 text-cream rounded-md bg-lightblue border border-lightblue hover:bg-lightblue/0 ease-linear duration-200"
-          >
-            Be the first to try
-          </a>
+          <div class="flex flex-col gap-y-2 items-center">
+            <a
+              href="#sign-up"
+              class="mt-3 px-8 py-4 z-10 text-cream rounded-md bg-lightblue border border-lightblue hover:bg-lightblue/0 ease-linear duration-200"
+            >
+              Be the first to try
+            </a>
+            <p class="text-white text-xs opacity-80">No credit card required</p>
+          </div>
         </div>
         <div
           class="absolute top-0 left-0 w-[182px] h-[303px] bg-lightblue opacity-20 rounded-r-full"
