center footer on mobile

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       </div>
       <div id="footer" class="max-w-[1440px] mx-auto flex flex-col px-[100px]">
         <div
-          class="w-full flex flex-col gap-y-8 md:flex-row justify-center md:justify-between pt-14 pb-8 items-end border-b-darkblue border-b"
+          class="w-full flex flex-col gap-y-8 md:flex-row justify-center md:justify-between pt-14 pb-8 items-center md:items-end border-b-darkblue border-b"
         >
           <div class="h-[40px]">
             <img
