update thanks content

--- a/thanks.html
+++ b/thanks.html
@@ -40,10 +40,9 @@
             class="z-10 text-black mb-1 leading-8 font-light w-full md:w-[710px] tracking-wider text-center"
           >
             We can't wait to have you on board. Keep an eye on your inbox for
-            exciting updates and important information. Get ready to experience
-            a seamless and intuitive way to manage your projects. If you have
-            any questions, feel free to reach out to our friendly support team.
-            Welcome to floats.ai!
+            exciting updates and important information. Get ready for AI-powered
+            recruitment. If you have any questions, feel free to reach out to
+            our friendly support team. Welcome to floats.ai!
           </h3>
           <div class="flex gap-x-2 text-darkblue">
             <i class="fa-regular fa-face-grin-squint text-xl pr-1"></i>
